using System;
using System.Collections.Generic;

namespace WorldCupMVVM.Models
{
    public class Country
    {
        public int Id { get; set; }
        public string Name { get; set; }
        public List<Championship> Championships { get; set; } = new List<Championship>();
    }
}
